# ColPack-1

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  colpack_0.1.orig.tar.gz.delta  colpack_0.1.orig.tar.gz.id  colpack_0.2.orig.tar.gz.delta  colpack_0.2.orig.tar.gz.id  colpack_0.46.orig.tar.gz.delta  colpack_0.46.orig.tar.gz.id  colpack_1.0.0.orig.tar.gz.delta  colpack_1.0.0.orig.tar.gz.id  colpack_1.0.1.orig.tar.gz.delta  colpack_1.0.1.orig.tar.gz.id  colpack_1.0.10.orig.tar.gz.delta  colpack_1.0.10.orig.tar.gz.id  colpack_1.0.2.orig.tar.gz.delta  colpack_1.0.2.orig.tar.gz.id  colpack_1.0.3.orig.tar.gz.delta  colpack_1.0.3.orig.tar.gz.id  colpack_1.0.4.orig.tar.gz.delta  colpack_1.0.4.orig.tar.gz.id  colpack_1.0.5.orig.tar.gz.delta  colpack_1.0.5.orig.tar.gz.id  colpack_1.0.6.orig.tar.gz.delta  colpack_1.0.6.orig.tar.gz.id  colpack_1.0.7.orig.tar.gz.delta  colpack_1.0.7.orig.tar.gz.id  colpack_1.0.8.orig.tar.gz.delta  colpack_1.0.8.orig.tar.gz.id  colpack_1.0.9.orig.tar.gz.delta  colpack_1.0.9.orig.tar.gz.id  common_variables.in  common_variables.in~  config.h  config.status  configure  configure.ac  configure.ac~  (+3 more)
.deps/: BipartiteGraphBicoloring.Plo  BipartiteGraphBicoloringInterface.Plo  BipartiteGraphCore.Plo  BipartiteGraphInputOutput.Plo  BipartiteGraphOrdering.Plo  BipartiteGraphPartialColoring.Plo  BipartiteGraphPartialColoringInterface.Plo  BipartiteGraphPartialOrdering.Plo  BipartiteGraphVertexCover.Plo  CoutLock.Plo  DisjointSets.Plo  File.Plo  GraphColoring.Plo  GraphColoringInterface.Plo  GraphCore.Plo  GraphInputOutput.Plo  GraphOrdering.Plo  HessianRecovery.Plo  JacobianRecovery1D.Plo  JacobianRecovery2D.Plo  Main.Po  MatrixDeallocation.Plo  Pause.Plo  RecoveryCore.Plo  StringTokenizer.Plo  Timer.Plo  command_line_parameter_processor.Plo  current_time.Plo  extra.Plo  mmio.Plo  stat.Plo
.svn/: entries
BipartiteGraphBicoloring/: BipartiteGraphBicoloring.cpp  BipartiteGraphBicoloring.h  BipartiteGraphCore.cpp  BipartiteGraphInputOutput.cpp  BipartiteGraphInputOutput.cpp~  BipartiteGraphOrdering.cpp  BipartiteGraphOrdering.h  makefile
BipartiteGraphPartialColoring/: BipartiteGraphPartialColoring.cpp  BipartiteGraphPartialColoring.cpp~  BipartiteGraphPartialColoring.h  BipartiteGraphPartialColoringInterface.cpp~  BipartiteGraphPartialColoringInterface.h~  BipartiteGraphPartialOrdering.cpp  BipartiteGraphPartialOrdering.cpp~  BipartiteGraphPartialOrdering.h  BipartiteGraphPartialOrdering.h~
GraphColoring/: .nfs000000000001651c00000481  GraphColoring.cpp  GraphColoring.cpp.bak_GOOD  GraphColoring.cpp.bak_vb_verticesNeedToBeCheckedNEXT  GraphColoring.h  GraphColoringInterface.cpp  GraphColoringInterface.cpp~  GraphColoringInterface.h  GraphCore.h  GraphInputOutput.cpp  GraphInputOutput.h  GraphOrdering.cpp  GraphOrdering.h  makefile
Graphs/: jac_pat-debug.mtx  jac_pat.mtx  mtx-spear-head-symmetric.mtx  mymatrix1-debug.mtx
Main/: ColPackHeaders.h  Definitions.h  Main.cpp  Main.cpp.bak  Main.cpp.bak2
Recovery/: HessianRecovery.cpp  HessianRecovery.cpp.bak_with_debug_code  HessianRecovery.cpp~  (+8 more)
(+138 files in other folders)
